--- a/dumbhippo/trunk/super/jboss/files/deploy/ejb3.deployer/META-INF/persistence.properties
+++ b/dumbhippo/trunk/super/jboss/files/deploy/ejb3.deployer/META-INF/persistence.properties
@@ -5,6 +5,7 @@ hibernate.transaction.auto_close_session=false
 hibernate.query.factory_class=org.hibernate.hql.ast.ASTQueryTranslatorFactory
 hibernate.hbm2ddl.auto=create-drop
 #hibernate.hbm2ddl.auto=create
+hibernate.cache.use_query_cache=true
 #hibernate.cache.provider_class=org.hibernate.cache.HashtableCacheProvider
 # Don't put data into the cache if it's already there. Putting existing data into the 
 # cache when there is no change is expensive in the clustered case and causes lock conflicts.
